Upgrade the 1.18.2 build to ForgeGradle 7